Adding more strings

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -100,7 +100,23 @@
 		    + z.indexOf("x") + " " 
 		    + z.indexOf("")
 		);
+
+		var k = "Katherine";
+		console.log(
+		    k.lastIndexOf("a") + " " 
+		    + k.lastIndexOf("a", k.length) + " " 
+		    + k.lastIndexOf("a", 6)
+		);
+		console.log(
+		    k.lastIndexOf("ac") + " " 
+		    + k.lastIndexOf("x") + " " 
+		    + k.lastIndexOf("")
+		);
 	
+		var e = "Excuse me while I kiss the sky.";
+		console.log(e.match());
+		console.log(e.match("[a-z]+"));
+
 	</script> 
 </body>
 </html>
