adding replace x with y

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -126,6 +126,9 @@
 		console.log(y.repeat(2));
 
 
+		var z = "Hello there ... ";
+		console.log(z.replace() + " " + z.replace("a", ""));
+
 	</script> 
 </body>
 </html>
