adding a replace with x with y

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -126,7 +126,7 @@
 		console.log(y.repeat(2));
 
 
-		var z = "Hello there ... ";
+		var z = "Hello a there ... ";
 		console.log(z.replace() + " " + z.replace("a", ""));
 
 	</script> 
