Miracle cure kills fifth patient

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -141,6 +141,13 @@
     + bb.slice(-4, -2)
 		);
 
+		var cc = "Miracle cure kills fifth patient";
+	console.log(cc.split(""));
+	console.log(cc.split("k"));
+	console.log(cc.split());
+
+	
+
 	</script> 
 </body>
 </html>
