State population to double by 2040, babies to blame

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -142,11 +142,15 @@
 		);
 
 		var cc = "Miracle cure kills fifth patient";
-	console.log(cc.split(""));
-	console.log(cc.split("k"));
-	console.log(cc.split());
+		console.log(cc.split(""));
+		console.log(cc.split("k"));
+		console.log(cc.split());
 
-	
+		var dd = "State population to double by 2040, babies to blame";
+		console.log(dd.startsWith("States"));
+		console.log(dd.startsWith("State"));
+
+		
 
 	</script> 
 </body>
