Police arrest everyone on February 22nd

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -150,7 +150,9 @@
 		console.log(dd.startsWith("States"));
 		console.log(dd.startsWith("State"));
 
-		
+		var ee = "Police arrest everyone on February 22nd";
+		console.log(ee.substr());
+		console.log(ee.substr(0, 6) + " " + ee.substr(6));
 
 	</script> 
 </body>
