--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -154,6 +154,10 @@
 		console.log(ee.substr());
 		console.log(ee.substr(0, 6) + " " + ee.substr(6));
 
+		var s = "HackerRank";
+		console.log(s.substring());
+		console.log(s.substring(0, 6) + " " + s.substring(6));
+
 	</script> 
 </body>
 </html>
