Voters to vote on whether to vote

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -154,9 +154,9 @@
 		console.log(ee.substr());
 		console.log(ee.substr(0, 6) + " " + ee.substr(6));
 
-		var s = "HackerRank";
-		console.log(s.substring());
-		console.log(s.substring(0, 6) + " " + s.substring(6));
+		var ff = "Voters to vote on whether to vote";
+		console.log(ff.substring());
+		console.log(ff.substring(0, 6) + " " + ff.substring(6));
 
 	</script> 
 </body>
