--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -158,6 +158,10 @@
 		console.log(ff.substring());
 		console.log(ff.substring(0, 6) + " " + ff.substring(6));
 
+		var gg = "Goat accused of robbery";
+		gg = gg.toLowerCase();
+		console.log(gg);
+
 	</script> 
 </body>
 </html>
