Museums full of history

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -162,6 +162,10 @@
 		gg = gg.toLowerCase();
 		console.log(gg);
 
+		var hh = "Museums full of history";
+		hh = hh.toUpperCase();
+		console.log(hh);
+
 	</script> 
 </body>
 </html>
