--- a/define.html
+++ b/define.html
@@ -13,5 +13,6 @@
 <h2>Permutation = the action of changing the arrangement, especially the linear order, of a set of items.</h2>
 <h2>Factoral = the product of an integer and all the integers below it; e.g. factorial four ( 4! ) is equal to 24.</h2>
 <h2>The three input/output (I/O) connections are called standard input (stdin), standard output (stdout) and standard error (stderr).</h2>
+<h2>The purpose of "use strict" is to indicate that the code should be executed in "strict mode". With strict mode, you can not, for example, use undeclared variables.</h2>
 </body>
 </html>
