--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -165,6 +165,30 @@
 		hh = hh.toUpperCase();
 		console.log(hh);
 
+		var ii = "     IHOP rebrands as IHOb, and then re-rebrands as IHOP    ";
+		console.log("Original Length: " + ii.length + ii + " ");
+		ii = ii.trim();
+		console.log("Trimmed Length: " + ii.length + ii + " ");
+
+		var jj = "    The best way to teach your kids about taxes is by eating 30% of their ice cream. Bill Murray    ";
+		console.log("Original Length: " + jj.length + jj + " ");
+		jj = jj.trimLeft();
+		console.log("Trimmed Length: " + jj.length + " " + jj);
+
+		//ERROR LISTING
+
+		// console.log("Hello" 
+
+		// function sum(a, b) {}
+		// add(2, 3) 
+
+		function sum(aaa, bbb) {
+    var result = aaa - bbb;
+    console.error("The sum of " + aaa + " and " + bbb + " is " + result);
+    return result;
+}
+		
+
 	</script> 
 </body>
 </html>
