adding more Iterating Over an Array's Elements

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -186,8 +186,36 @@
     var result = aaa - bbb;
     console.error("The sum of " + aaa + " and " + bbb + " is " + result);
     return result;
-}
+		}
+
+		const arr = ['a', 'b', 'c', 'd'];
+		// 'i' is the index
+		for (let i = 0; i < arr.length; i++) {
+		    console.log('arr[' + i + ']: ' + arr[i]);
+		}
+
+		const oop = {
+    a: 1,
+    b: 2,
+    c: 3,
+    d: 4
+		};
+
+		console.log('property: value');
+		// 'p' is the property
+		for (ppo in oop) {
+		    console.log(ppo + ': ' + oop[ppo]);
+		};
+
+		const o3 = ['first', 'second', false];
+		// 'p' is the index
+		for (let p3 in o3) {
+		    console.log(p3 + ' ' + o3[p3]);
+		};
+
 		
+
+
 
 	</script> 
 </body>
