adding a for loop to map

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -229,6 +229,27 @@
 		});
 
 
+		let actress = new Map([
+    ["firstName", "Julia"],
+    ["lastName", "Roberts"],
+    ["dateOfBirth", "October 28, 1967"],
+    ["nationality", "American"],
+    ["firstMovie", "Satisfaction"]
+		]);
+
+		// Print each Key-Value pair in the map
+		for (let info of actress) {
+		    console.log(info);
+		};
+
+		// Print each Key and Value as "Key: Value"
+		console.log();
+		for (let info of actress) {
+		    console.log(info[0] + ": " + info[1]);
+		};
+
+		
+
 
 	</script> 
 </body>
