adding while and for loops

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -248,8 +248,24 @@
 		    console.log(info[0] + ": " + info[1]);
 		};
 
-		
 
+		var cars = ["BMW", "Volvo", "Saab", "Ford"];
+		var i = 0;
+		var text = "";
+
+		for (;cars[i];) {
+		  text += cars[i] + "<br>";
+		  i++;
+		};
+
+		var cars = ["BMW", "Volvo", "Saab", "Ford"];
+		var i = 0;
+		var text = "";
+
+		while (cars[i]) {
+		  text += cars[i] + "<br>";
+		  i++;
+		};
 
 	</script> 
 </body>
