adding more for and while loops

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -267,7 +267,75 @@
 		  i++;
 		};
 
-		
+		var cars5 = ["BMW", "Volvo", "Saab", "Ford"];
+		list: {
+		  text += cars5[0] + "<br>"; 
+		  text += cars5[1] + "<br>"; 
+		  break list;
+		  text += cars5[2] + "<br>"; 
+		  text += cars5[3] + "<br>"; 
+		};
+
+		const arr5 = ['a', 'b', 'c', 'd'];
+		// 'i' is the index
+		for (let i = 0; i < arr5.length; i++) {
+		    console.log('arr5[' + i + ']: ' + arr5[i]);
+		};
+
+		const o2 = {
+    a: 1,
+    b: 2,
+    c: 3,
+    d: 4
+		};
+
+		console.log('property: value');
+		// 'p' is the property
+		for (p2 in o2) {
+		    console.log(p2 + ': ' + o2[p2]);
+		}
+
+		for (i6 = 0; i6 < 10; i6++) {
+	  console.log(i);
+	  if (i6 == 5) {
+	    
+		break
+		;
+		  }
+		}
+
+		var n6 = 0;
+		var x6 = 0;
+
+		while (n6 < 3) {
+		  n6++;
+		  x6 += n6;
+		}
+
+		const arrrrrrggg = ['a', 'b', 'c', 'd'];
+		arrrrrrggg.forEach((value, index, array) => {
+		    console.log('index', index, 'has a value of', value,
+		    'which correlates to array[' + index + ']:', array[index]);
+		});
+		arrrrrrggg.forEach((value, index) => {
+		    console.log('index', index, 'has a value of', value);
+		});
+		arrrrrrggg.forEach((value) => {
+		    console.log('value:', value);
+		});
+
+		const oooooo = {
+    a: 1,
+    b: 2,
+    c: 3,
+    d: 4
+		};
+
+		console.log('property: value');
+		// 'p' is the property
+		for (p8 in oooooo) {
+		    console.log(p8 + ': ' + oooooo[p8]);
+		}
 
 	</script> 
 </body>
