--- a/define.html
+++ b/define.html
@@ -12,7 +12,11 @@
 <h2>Expression = An algebraic expression is a mathematical phrase that can contain ordinary numbers, variables (like x or y) and operators (like add,subtract,multiply, and divide). Here are some algebraic expressions: a + 1. a - b. 3x.</h2>
 <h2>Permutation = the action of changing the arrangement, especially the linear order, of a set of items.</h2>
 <h2>Factoral = the product of an integer and all the integers below it; e.g. factorial four ( 4! ) is equal to 24.</h2>
+
+
 <h2>The three input/output (I/O) connections are called standard input (stdin), standard output (stdout) and standard error (stderr).</h2>
 <h2>The purpose of "use strict" is to indicate that the code should be executed in "strict mode". With strict mode, you can not, for example, use undeclared variables.</h2>
+
+<h2>Termination Condition = which is an expression that's evaluated before each pass through the loop. If this expression evaluates to true, then statement is executed; if it evaluates to false, execution jumps to the first line of code after the end of the loop.</h2>
 </body>
 </html>
