adding more to fizz buzz?

--- a/fizzBuzz.html
+++ b/fizzBuzz.html
@@ -13,7 +13,7 @@ function fizzBuzz1(num){
 		else console.log(i);
 	}
 }
-fizzBuzz1();
+// console.log(fizzBuzz1(10));
 
 function fizzBuzz2(){
 	for(var i=1;i<=100;i++){
@@ -28,6 +28,17 @@ function fizzBuzz2(){
 		}
 	}
 }
+console.log(fizzBuzz2());
+
+		function factorial1(n) {
+    if (n > 1) {
+        return n * factorial1(n - 1);
+    	}
+    	return 1;
+		}
+
+		console.log(factorial1(10));
+
 
 function fizzBuzz3(){
 	for(var i=1;i<=100;i++){
