creating function for range of years

--- a/ArrayCardio2.html
+++ b/ArrayCardio2.html
@@ -27,7 +27,16 @@
     // 1. Filter the list of inventors for those who were born in the 1500's
     // Array.prototype.map()
 
-    const fifteen = inventors.filter(function())
+    const fifteen = inventors.filter(function(inventor){
+    	if(inventor.year >= 1500 && inventor.year < 1600) {
+    		return true;
+    	} else {
+    		return false;
+    	}
+    });
+
+    console.table(fifteen);
+
 
 
     // 2. Give us an array of the inventors' first and last names
