working on map function

--- a/ArrayCardio2.html
+++ b/ArrayCardio2.html
@@ -25,8 +25,6 @@
 
 // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-    // Array.prototype.map()
-
     const fifteen = inventors.filter(function(inventor){
     	if(inventor.year >= 1500 && inventor.year < 1600) {
     		return true;
@@ -38,9 +36,21 @@
     console.table(fifteen);
 
 
+    const fifteenTwo = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600)
+		console.table(fifteenTwo);
+
+		// Array.prototype.map()
+
+		const fullNames = inventors.map(inventor => inventor.first + " " + inventor.last);
+		console.log(fullNames)
+
+		const fullNamessss = inventors.map(inventor => inventor.first + " " + inventor.last);
+		console.log(fullNamessss)
 
     // 2. Give us an array of the inventors' first and last names
     // Array.prototype.sort()
+
+
     // 3. Sort the inventors by birthdate, oldest to youngest
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
