--- a/ArrayCardio2.html
+++ b/ArrayCardio2.html
@@ -23,7 +23,7 @@
     ];
     const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
 
-// Array.prototype.filter()
+		// Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
     const fifteen = inventors.filter(function(inventor){
     	if(inventor.year >= 1500 && inventor.year < 1600) {
@@ -42,13 +42,23 @@
 		// Array.prototype.map()
 
 		const fullNames = inventors.map(inventor => inventor.first + " " + inventor.last);
-		console.log(fullNames)
+		console.table(fullNames)
 
-		const fullNamessss = inventors.map(inventor => inventor.first + " " + inventor.last);
-		console.log(fullNamessss)
+		const fullNamessss = inventors.map(inventor => `${inventor.first} + " " + ${inventor.last}`);
+		console.table(fullNamessss);
 
-    // 2. Give us an array of the inventors' first and last names
     // Array.prototype.sort()
+    // 2. Give us an array of the inventors' first and last names
+    const ordered = inventors.sort(function(firstPerson, secondPerson) {
+    	if(firstPerson.year > secondPerson.year) {
+    		return 1;
+    	} else {
+    		return -1;
+    	}
+
+    });
+
+		console.table(ordered);    
 
 
     // 3. Sort the inventors by birthdate, oldest to youngest
