adding map over an array

--- a/ArrayCardio2.html
+++ b/ArrayCardio2.html
@@ -86,8 +86,18 @@
     // 5. Sort the inventors by years lived
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+
+    const category = document.querySelector('.mw-category');
+    const links = Array.from(category.querySelectorAll('a'));
+
+		const de = links.map(link => link.textContent);
+
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+
+    
+    	
+
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
