--- a/ArrayCardio2.html
+++ b/ArrayCardio2.html
@@ -87,16 +87,22 @@
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-    const category = document.querySelector('.mw-category');
-    const links = Array.from(category.querySelectorAll('a'));
+  //   const category = document.querySelector('.mw-category');
+  //   const links = Array.from(category.querySelectorAll('a'));
 
-		const de = links.map(link => link.textContent);
+		// const de = links.map(link => link.textContent).filter(streetName => streetName.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
-    
-    	
+    const alpha = people.sort(function(lastOne, nextOne) {
+    	const [aLast, bFirst] = lastOne.split(', ');
+    	const [bLast, bFirst] = nextOne.split(', ');
+    	return aLast > bLast ? 1 : 1;
+    });
+
+    console.log(aLast);
+
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
