--- a/ArrayCardio2.html
+++ b/ArrayCardio2.html
@@ -95,7 +95,7 @@
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
-    const alpha = people.sort(function(lastOne, nextOne) {
+    const alpha = people.sort((lastOne, nextOne) => {
     	const [aLast, bFirst] = lastOne.split(', ');
     	const [bLast, bFirst] = nextOne.split(', ');
     	return aLast > bLast ? 1 : 1;
