adding reduce excercise

--- a/ArrayCardio2.html
+++ b/ArrayCardio2.html
@@ -108,7 +108,10 @@
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
-    
+    const transporatation = data.reduce(function(ojb, item) {
+    	ojb
+    	retun obj;
+    }, {})
 
 
 
