--- a/Arrays.html
+++ b/Arrays.html
@@ -6,6 +6,8 @@
 <body>
 
 	<script type="text/javascript">
+
+		//It takes one parameter: a function that is called on every element of the array. And it returns a new array, so no side effects here.
 		
 	const numbers = [1, 2, 3, 4]
 
@@ -18,7 +20,64 @@
 	const numbersPlusTen = numbers.map(n => n + 10)
 	console.log(numbersPlusTen)
 
+	const numbersMinusFive = numbers.map(n => n - 5)
+	console.log(numbersMinusFive)
 
+
+	//You can also create a new array that keeps only one particular property of an object:
+
+	const allActivities = [
+  { title: 'My activity', coordinates: [50.123, 3.291] },
+  { title: 'Another activity', coordinates: [1.238, 4.292] },
+  // etc.
+	]
+
+	const allCoordinates = allActivities.map(activity => activity.coordinates)
+	console.log(allCoordinates) // [[50.123, 3.291], [1.238, 4.292]]
+
+		//So, remember, whenever you need to transform an array, think of using map.
+
+
+	// street = [
+	// 	0: { grocer: True},
+	// 	1: {'school': True, 'musuem': True} [3, 1, 0]
+	// 	2: {}, [|4-2|=2, |0-2|=2, |1-2|=1]
+	// 	3: {}, [1,3,2]
+	// 	4: {'bookstore': True},
+	// 	5: {'museum': True},
+	// 	6: {'grocer': True}
+	// 	]
+
+	// 	requirements = {
+	// 		'bookstore': True,
+	// 		'grocer': True,
+	// 		'school': True,
+	// 	}
+
+
+	// const streetLocation = street.map(street => street.requirements)
+	// console.log(streetLocation) 
+
+
+
+
+	// Just like map does, it takes a function as its only parameter that is called on every element of the array. This function needs to return a boolean:
+
+	// true if you want to keep the element in the array
+	// false if you don’t want to keep it.
+	// Then you’ll have a shiny new array with the elements you wanted tok eep.
+
+	// For example, you can keep just the odd numbers in an array:
+
+	const numbersTwo = [1, 2, 3, 4, 5, 6]
+	const oddNumbers = numbersTwo.filter(n => n % 2 !== 0)
+	console.log(oddNumbers) // [1, 3, 5]
+
+	const numbersThree = [1, 2, 3, 4, 5, 6]
+	const evenNumbers = numbersThree.filter(n => n % 2 ===0)
+	console.log(evenNumbers)
+
+	
 
 
 
