adding numbers plus one

--- a/Arrays2.html
+++ b/Arrays2.html
@@ -7,13 +7,17 @@
 
 	<script type="text/javascript">
 		
+// Map Function	
+
+	const numbers = [1,2,3,4]
+	const numbersPlusOne = numbers.map(n => n + 1)
+	console.log(numbersPlusOne)
 
 
 
 
 
 
-		
 	</script>
 
 </body>
