--- a/Arrays2.html
+++ b/Arrays2.html
@@ -14,7 +14,8 @@
 	console.log(numbersPlusOne)
 
 	const allActivities = [
-	
+		{ title: 'My activitiy', coordinates:[50.123, 3.291] },
+		{ title: 'Another activitiy', coordinates:[50.123, 3.291] },
 
 	]
 
