more map functions

--- a/Arrays2.html
+++ b/Arrays2.html
@@ -15,9 +15,14 @@
 
 	const allActivities = [
 		{ title: 'My activitiy', coordinates:[50.123, 3.291] },
-		{ title: 'Another activitiy', coordinates:[50.123, 3.291] },
+		{ title: 'Another Activitiy', coordinates:[50.123, 3.291] },
+		];
 
-	]
+		const allCoordinates = allActivities.map(activitiy => activitiy.coordinates);
+
+		console.log(allCoordinates)
+
+		
 
 
 
