--- a/Arrays2.html
+++ b/Arrays2.html
@@ -22,7 +22,12 @@
 
 		console.log(allCoordinates)
 
-		
+		// Filter function
+
+		const numbers = [1,2,3,4,5,6]
+		const oddNumbers = numbers.filter(n => n % 2 !== 0)
+		console.log(addNumbers)
+
 
 
 
