--- a/Arrays3.html
+++ b/Arrays3.html
@@ -7,6 +7,7 @@
 <script type="text/javascript">
 	
 const numbers = [1,2,3,4]
+
 const numbersPlusOne = numbers.map(n => n + 1)
 console.log(numbersPlusOne)
 
@@ -16,6 +17,14 @@ const allActivities = [
 ]
 const allCoordinates = allActivities.map(activity => activity.coordinates)
 console.log(allCoordinates)
+
+
+const numbersPlusTwo = numbers.map(n => n + 2)
+console.log(numbersPlusTwo)
+
+const numbersPlusThree = numbers.map(n => n +3)
+console.log(numbersPlusThree)
+
 
 
 
