--- a/Arrays3.html
+++ b/Arrays3.html
@@ -11,22 +11,22 @@ const numbers = [1,2,3,4]
 const numbersPlusOne = numbers.map(n => n + 1)
 console.log(numbersPlusOne)
 
+const numbersPlusTwo = numbers.map(n => n + 2)
+console.log(numbersPlusTwo)
+
+const numbersPlusThree = numbers.map(n => n + 3)
+console.log(numbersPlusThree)
+
+const numbersTimesFour = numbers.map(n => n * 4)
+console.log(numbersTimesFour)
+
+
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
 { title: 'Another Activity', coordinates: [1.238, 4.292]},
 ]
 const allCoordinates = allActivities.map(activity => activity.coordinates)
 console.log(allCoordinates)
-
-
-const numbersPlusTwo = numbers.map(n => n + 2)
-console.log(numbersPlusTwo)
-
-const numbersPlusThree = numbers.map(n => n +3)
-console.log(numbersPlusThree)
-
-
-
 
 
 
