working on some more arrays

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -20,6 +20,8 @@ console.log(numbersPlusThree)
 const numbersTimesFour = numbers.map(n => n * 4)
 console.log(numbersTimesFour)
 
+const numbersDividedByTwo = numbers.map(n => n % 2)
+
 
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
