adding more arrays

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -23,6 +23,22 @@ console.log(numbersTimesFour);
 const numbersDividedByTwo = numbers.map(n => n % 2);
 console.log(numbersDividedByTwo);
 
+const numbersTimesTwo = numbers.map(n => n * 2);
+console.log(numbersTimesTwo);
+
+const numbersMinusTwo = numbers.map(n => n - 2);
+console.log(numbersMinusTwo);
+
+const numbersMinusFive = numbers.map(n => n- 5);
+console.log(numbersMinusFive);
+
+const numbersPlusOneHundred = numbers.map(n => n + 100);
+console.log(numbersPlusOneHundred);
+
+const numbersMinusTwenty = numbers.map(n => n - 20);
+console.log(numbersMinusTwenty);
+
+
 
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
