getting my array on

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -38,6 +38,12 @@ console.log(numbersPlusOneHundred);
 const numbersMinusTwenty = numbers.map(n => n - 20);
 console.log(numbersMinusTwenty);
 
+const numbersPlusFive = numbers.map(n => n +5);
+console.log(numbersPlusFive);
+
+const numbersPlusThirty = numbers.map(n => n + 30);
+console.log(numbersPlusThirty);
+
 
 
 const allActivities = [
