adding more arrays

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -44,7 +44,8 @@ console.log(numbersPlusFive);
 const numbersPlusThirty = numbers.map(n => n + 30);
 console.log(numbersPlusThirty);
 
-
+cost numbersPlusFour = numbers.map(n => n + 4);
+console.log(numbersPlusFour);
 
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
