fixing an array

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -44,7 +44,7 @@ console.log(numbersPlusFive);
 const numbersPlusThirty = numbers.map(n => n + 30);
 console.log(numbersPlusThirty);
 
-cost numbersPlusFour = numbers.map(n => n + 4);
+const numbersPlusFour = numbers.map(n => n + 4);
 console.log(numbersPlusFour);
 
 const allActivities = [
