adding to my array cardio

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -47,6 +47,9 @@ console.log(numbersPlusThirty);
 const numbersPlusFour = numbers.map(n => n + 4);
 console.log(numbersPlusFour);
 
+const numbersPlusEight = numbers.map(n => n + 8);
+console.log(numbersPlusEight);
+
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
 { title: 'Another Activity', coordinates: [1.238, 4.292]},
