adding more to array cardio

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -50,6 +50,11 @@ console.log(numbersPlusFour);
 const numbersPlusEight = numbers.map(n => n + 8);
 console.log(numbersPlusEight);
 
+const numbersMinusThree = numbers.map(n => n - 3);
+console.log(numbersMinusThree);
+
+
+
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
 { title: 'Another Activity', coordinates: [1.238, 4.292]},
