--- a/Arrays3.html
+++ b/Arrays3.html
@@ -53,7 +53,8 @@ console.log(numbersPlusEight);
 const numbersMinusThree = numbers.map(n => n - 3);
 console.log(numbersMinusThree);
 
-
+const numbersTimesEight = numbers.map(n => n * 8);
+console.log(numbersTimesEight);
 
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
