adding more cardio

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -56,6 +56,11 @@ console.log(numbersMinusThree);
 const numbersTimesEight = numbers.map(n => n * 8);
 console.log(numbersTimesEight);
 
+const numbersPlusTwenty = numbers.map(n => n + 20);
+console.log(numbersPlusTwenty);
+
+const numbersTimesForty
+
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
 { title: 'Another Activity', coordinates: [1.238, 4.292]},
