adding more array cardio, baby

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -59,7 +59,8 @@ console.log(numbersTimesEight);
 const numbersPlusTwenty = numbers.map(n => n + 20);
 console.log(numbersPlusTwenty);
 
-const numbersTimesForty
+const numbersTimesForty = numbers.map (n => n * 40);
+console.log(numbersTimesForty);
 
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
