more cardio baby

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -62,6 +62,9 @@ console.log(numbersPlusTwenty);
 const numbersTimesForty = numbers.map (n => n * 40);
 console.log(numbersTimesForty);
 
+const numbersDividedByFive = numbers.map(n => n % 5);
+console.log(numbersDividedByFive);
+
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
 { title: 'Another Activity', coordinates: [1.238, 4.292]},
