adding more array cardio

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -65,6 +65,15 @@ console.log(numbersTimesForty);
 const numbersDividedByFive = numbers.map(n => n % 5);
 console.log(numbersDividedByFive);
 
+const numbersDividedByTen = numbers.map(n => n % 10);
+console.log(numbersDividedByTen);
+
+const numbersDividedByZero = numbers.map(n => n % 0);
+console.log(numbersDividedByZero);
+
+const numbersDividedByOne = numbers.map(n => n % 1);
+console.log(numbersDividedByOne);
+
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
 { title: 'Another Activity', coordinates: [1.238, 4.292]},
