adding more arrays

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -76,6 +76,48 @@ console.log(numbersDividedByOne);
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+const numbersMinusEight = numbers.map(n => n - 8);
+console.log(numbersMinusEight);
+
+
+
+
+
+
+
+
+
+
 const allActivities = [
 { title: 'My Activity', coordinates: [50.123, 3.291]},
 { title: 'Another Activity', coordinates: [1.238, 4.292]},
