adding more array cardio

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -74,40 +74,16 @@ console.log(numbersDividedByZero);
 const numbersDividedByOne = numbers.map(n => n % 1);
 console.log(numbersDividedByOne);
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 const numbersMinusEight = numbers.map(n => n - 8);
 console.log(numbersMinusEight);
+
+const numbersPLusEight = numbers.map(n => n + 8);
+console.log(numbersPLusEight);
+
+cosnt numbersDividedByEight = numbers.map(n => n % 8);
+console.log(numbersDividedByEight);
+
+
 
 
 
