--- a/Arrays3.html
+++ b/Arrays3.html
@@ -84,8 +84,15 @@ cosnt numbersDividedByEight = numbers.map(n => n % 8);
 console.log(numbersDividedByEight);
 
 
+const numbers = [1, 2, 3, 4, 5, 6]
+const oddNumbers = numbers.filter(n => n % 2 !== 0);
+console.log(oddNumbers); // [1, 3, 5]
 
+const oddNumbersTwo = numbers.filter(n => n % 2 !== 0);
+console.log(oddNumbersTwo);
 
+const oddNumbersThree = numbers.filter(n => n % 2 !== 0);
+console.log(oddNumbersThree);
 
 
 
