--- a/Arrays3.html
+++ b/Arrays3.html
@@ -91,12 +91,11 @@ console.log(oddNumbers); // [1, 3, 5]
 const oddNumbersTwo = numbers.filter(n => n % 2 !== 0);
 console.log(oddNumbersTwo);
 
-const oddNumbersThree = numbers.filter(n => n % 2 !== 0);
+const oddNumbersThree = numbers.filter(n => n % 3 !== 0);
 console.log(oddNumbersThree);
 
-
-
-
+const oddNumbersFour = numbers.filter(n => n % 4 !==0);
+console.log(oddNumbersFour);
 
 
 
