--- a/Arrays3.html
+++ b/Arrays3.html
@@ -80,11 +80,9 @@ console.log(numbersMinusEight);
 const numbersPLusEight = numbers.map(n => n + 8);
 console.log(numbersPLusEight);
 
-cosnt numbersDividedByEight = numbers.map(n => n % 8);
+const numbersDividedByEight = numbers.map(n => n % 8);
 console.log(numbersDividedByEight);
 
-
-const numbers = [1, 2, 3, 4, 5, 6]
 const oddNumbers = numbers.filter(n => n % 2 !== 0);
 console.log(oddNumbers); // [1, 3, 5]
 
@@ -97,11 +95,13 @@ console.log(oddNumbersThree);
 const oddNumbersFour = numbers.filter(n => n % 4 !==0);
 console.log(oddNumbersFour);
 
-
+const evenNumbers = numbers.filter(n => n % 2 ===0);
+console.log(evenNumbers);
 
 
 const allActivities = [
-{ title: 'My Activity', coordinates: [50.123, 3.291]},
+{ title: 'My Activity', c
+coordinates: [50.123, 3.291]},
 { title: 'Another Activity', coordinates: [1.238, 4.292]},
 ];
 const allCoordinates = allActivities.map(activity => activity.coordinates);
