adding more array filters baby

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -98,8 +98,12 @@ console.log(oddNumbersFour);
 const evenNumbers = numbers.filter(n => n % 2 ===0);
 console.log(evenNumbers);
 
+const evenNumbersPlusTwo = numbers.filter(n => n % 2 ===0);
+console.log(evenNumbersPlusTwo);
+
+
 const allActivities = [
-{ title: 'My Activity', c
+{ title: 'My Activity',
 coordinates: [50.123, 3.291]},
 { title: 'Another Activity', coordinates: [1.238, 4.292]},
 ];
