--- a/Arrays3.html
+++ b/Arrays3.html
@@ -101,6 +101,9 @@ console.log(evenNumbers);
 const evenNumbersPlusTwo = numbers.filter(n => n % 2 ===0);
 console.log(evenNumbersPlusTwo);
 
+const evenNumbersMinusOne = numbers.filter(n => n - 1);
+console.log(evenNumbersMinusOne);
+
 
 const allActivities = [
 { title: 'My Activity',
