adding more array cardio

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -80,6 +80,9 @@ console.log(numbersMinusEight);
 const numbersPLusEight = numbers.map(n => n + 8);
 console.log(numbersPLusEight);
 
+const numbersPlusNine = numbers.map(n => n + 9);
+console.log(numbersPlusNine);
+
 const numbersDividedByEight = numbers.map(n => n % 8);
 console.log(numbersDividedByEight);
 
@@ -103,6 +106,7 @@ console.log(evenNumbersPlusTwo);
 
 const evenNumbersMinusOne = numbers.filter(n => n - 1);
 console.log(evenNumbersMinusOne);
+
 
 const allActivities = [
 { title: 'My Activity',
