adding more array cardio

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -11,6 +11,9 @@ const numbers = [1,2,3,4]
 const numbersPlusOne = numbers.map(n => n + 1);
 console.log(numbersPlusOne);
 
+const numbersPlusForty = numbers.map(n => n + 1);
+console.log(numbersPlusForty);
+
 const numbersPlusTwo = numbers.map(n => n + 2);
 console.log(numbersPlusTwo);
 
