--- a/Arrays3.html
+++ b/Arrays3.html
@@ -32,6 +32,9 @@ console.log(numbersTimesTwo);
 const numbersMinusTwo = numbers.map(n => n - 2);
 console.log(numbersMinusTwo);
 
+const numbersMinusTen = numbers.map(n => n -10);
+console.log(numbersMinusTen);
+
 const numbersMinusFive = numbers.map(n => n- 5);
 console.log(numbersMinusFive);
 
