--- a/Arrays3.html
+++ b/Arrays3.html
@@ -32,8 +32,11 @@ console.log(numbersTimesTwo);
 const numbersMinusTwo = numbers.map(n => n - 2);
 console.log(numbersMinusTwo);
 
-const numbersMinusTen = numbers.map(n => n -10);
+const numbersMinusTen = numbers.map(n => n - 10);
 console.log(numbersMinusTen);
+
+const numbersPlusThirtyFive = numbers.map(n => n + 35);
+console.log(numbersPlusThirtyFive);
 
 const numbersMinusFive = numbers.map(n => n- 5);
 console.log(numbersMinusFive);
