adding more arrays until I know this by heart

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -26,6 +26,9 @@ console.log(numbersTimesFour);
 const numbersDividedByTwo = numbers.map(n => n % 2);
 console.log(numbersDividedByTwo);
 
+const numbersDividedByThree = numbers.map(n => n % 10);
+console.log(numbersDividedByThree);
+
 const numbersTimesTwo = numbers.map(n => n * 2);
 console.log(numbersTimesTwo);
 
