--- a/Arrays3.html
+++ b/Arrays3.html
@@ -6,7 +6,7 @@
 <body>
 <script type="text/javascript">
 	
-const numbers = [1,2,3,4]
+const numbers = [1,2,3,4,5,6,7,8,9,10];
 
 const numbersPlusOne = numbers.map(n => n + 1);
 console.log(numbersPlusOne);
