adding filter numbers

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -104,6 +104,9 @@ console.log(oddNumbers); // [1, 3, 5]
 const oddNumbersTwo = numbers.filter(n => n % 2 !== 0);
 console.log(oddNumbersTwo);
 
+const oddNumbersFive = numbers.filter(n => n % 5 !== 0);
+console.log(oddNumbersFive);
+
 const oddNumbersThree = numbers.filter(n => n % 3 !== 0);
 console.log(oddNumbersThree);
 
