addine more map functions

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -59,6 +59,9 @@ console.log(numbersPlusThirty);
 const numbersPlusFour = numbers.map(n => n + 4);
 console.log(numbersPlusFour);
 
+const numbersPlusFiftyFive = numbers.map(n => n + 55);
+console.log(numbersPlusFiftyFive);
+
 const numbersPlusEight = numbers.map(n => n + 8);
 console.log(numbersPlusEight);
 
