adding another array

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -62,6 +62,9 @@ console.log(numbersPlusFour);
 const numbersPlusFiftyFive = numbers.map(n => n + 55);
 console.log(numbersPlusFiftyFive);
 
+const numbersTimesOne = numbers.map(n => n * 1);
+console.log(numbersTimesOne);
+
 const numbersPlusEight = numbers.map(n => n + 8);
 console.log(numbersPlusEight);
 
