--- a/Arrays3.html
+++ b/Arrays3.html
@@ -158,7 +158,17 @@ function removeParticipant(participant, id) {
 
 console.log(removeParticipant(participants, 'a3f47'));
 
+const participantsTwo = [
+{ id: 'a3f47', username: 'john'},
+{ id: 'fek28', username: 'mary'},
+{ id: 'n3j44', username: 'sam'},
+];
 
+function removeParticipantAlso(participantsTwo, id) {
+	return participantsTwo.filter(participant => participant.id !== id)
+};
+
+console.log(removeParticipantAlso(participantsTwo, 'a3f47'));
 
 
 
