adding console log for filter

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -138,7 +138,7 @@ function removeParticipant(participants, id) {
 	return participants.filter(participant => participant.id !== id)
 };
 
-console.log(removeParticipant())
+console.log(removeParticipant(participants, 'a3f47'));
 
 const allActivities = [
 { title: 'My Activity',
