--- a/Arrays3.html
+++ b/Arrays3.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 <script type="text/javascript">
+
+// MAP
+// It takes one parameter: a function that is called on every element of the array. And it returns a new array.
 	
 const numbers = [1,2,3,4,5,6,7,8,9,10];
 
@@ -104,6 +107,20 @@ console.log(numbersPlusNine);
 const numbersDividedByEight = numbers.map(n => n % 8);
 console.log(numbersDividedByEight);
 
+// MAP
+// Also create a new array that keeps only one particular property of an object:
+
+const allActivities = [
+{ title: 'My Activity',
+coordinates: [50.123, 3.291]},
+{ title: 'Another Activity', coordinates: [1.238, 4.292]},
+];
+const allCoordinates = allActivities.map(activity => activity.coordinates);
+console.log(allCoordinates);
+
+// FILTER
+// Takes a function as its only parameter that is called on every element of the array. This function needs to return a boolean: true if you want to keep the element in the array false if you don’t want to keep it. Then you’ll have a shiny new array with the elements you wanted to keep.
+
 const oddNumbers = numbers.filter(n => n % 2 !== 0);
 console.log(oddNumbers); // [1, 3, 5]
 
@@ -140,13 +157,15 @@ function removeParticipant(participants, id) {
 
 console.log(removeParticipant(participants, 'a3f47'));
 
-const allActivities = [
-{ title: 'My Activity',
-coordinates: [50.123, 3.291]},
-{ title: 'Another Activity', coordinates: [1.238, 4.292]},
-];
-const allCoordinates = allActivities.map(activity => activity.coordinates);
-console.log(allCoordinates);
+
+// REDUCE - reduce is about taking an array of values and combine them into one value. It takes two parameters, a callback function which is our reducer and an optional initial value (which is the first item of the array by default). The reducer itself takes four parameters:
+
+// The accumulator: it accumulates the returned values in your reducer.
+// The current value of the array
+// The current index
+// The array reduce was called upon
+// Most of the time, you’ll just use the first two parameters: the accumulator and the current value.
+
 
 </script>
 
