adding in array

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -158,14 +158,9 @@ function removeParticipant(participantsOne, id) {
 console.log(removeParticipant(participantsOne, 'a3f47'));
 
 
-const participant = [
-	{ id: 'a3f47', username: 'john'},
-	{ id: 'fek28', username: 'mary'},
-	{ id: 'nej44', username: 'sam'},
-];
-
-function
-
+const sports = ['football', 'archery', 'judo']
+const hasFootball = sports.includes('football')
+console.log(hasFootball)
 
 // REDUCE - reduce is about taking an array of values and combine them into one value. It takes two parameters, a callback function which is our reducer and an optional initial value (which is the first item of the array by default). The reducer itself takes four parameters:
 
