--- a/Arrays3.html
+++ b/Arrays3.html
@@ -158,9 +158,9 @@ function removeParticipant(participantsOne, id) {
 console.log(removeParticipant(participantsOne, 'a3f47'));
 
 
-const sports = ['football', 'archery', 'judo']
-const hasFootball = sports.includes('football')
-console.log(hasFootball)
+const sports = ['football', 'archery', 'judo'];
+const hasFootball = sports.includes('football');
+console.log(hasFootball);
 
 // REDUCE - reduce is about taking an array of values and combine them into one value. It takes two parameters, a callback function which is our reducer and an optional initial value (which is the first item of the array by default). The reducer itself takes four parameters:
 
