adding reduce function

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -170,6 +170,12 @@ console.log(hasFootball);
 // The array reduce was called upon
 // Most of the time, you’ll just use the first two parameters: the accumulator and the current value.
 
+const numbers = [37, 12, 28, 4, 9]
+const total = numbers.reduce((total, n) => total + n)
+console.log(total) 
+
+
+
 
 </script>
 
