adding index of

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -213,6 +213,14 @@ const numbers = [1, 2, 3, 4, 5]
 numbers.forEach(console.log)
 
 
+// indexOf
+// It is used to return the first index at which a given element can be found in the array. indexOf was also widely used to check whether an element is in an array or not. To be honest, I don’t use it that much as of today.
+const sports = ['football', 'archery', 'judo']
+
+const judoIndex = sports.indexOf('judo')
+console.log(judoIndex) // 2
+
+
 
 
 
